fixed iframe behaviour, added scrollbars, max-size for code snips in widget, activity feed and content display

--- a/client/stylus/app.contentdisplays.styl
+++ b/client/stylus/app.contentdisplays.styl
@@ -764,6 +764,8 @@ a.opinion-size-link
   margin-top 8px
 
 .activity-item.codebin .activity-item-right-col .code-bin-source figure.code-container
+  // max-width -webkit-calc(32%-22px)
+  // width -webkit-calc(32%-22px)
   width 32%
   display inline-block
   vertical-align top
@@ -772,11 +774,62 @@ a.opinion-size-link
   &:first-child
     margin-right 11px
 
+  pre code
+    max-height 288px
 .code-bin-source
-  margin-bottom 5px
+
+  pre.subview
+    padding 8px 10px
+    min-height 150px
+    max-height 300px
+
+  pre.subview span
+    font-size 10px
+    font-weight 300
+
+.result-button
+  margin-bottom 15px
 
 .result-container
-  width 100%
   borderBox()
+  width 100%
   rounded(4px)
   box-shadow                        inset 0 1px 2px rgba(0,0,0,0.10)
+  background-color                  #E0E0DF
+
+  .result-frame
+    width 100%
+    padding
+    rounded(4px)
+
+::-webkit-scrollbar
+  width: 10px
+  height: 10px
+
+::-webkit-scrollbar-button:start:decrement,
+::-webkit-scrollbar-button:end:increment
+  height: 10px
+  width: 10px
+  display: block
+  background: #242424
+  background-repeat: no-repeat
+
+::-webkit-scrollbar-track-piece
+  background-color: #242424
+
+::-webkit-scrollbar-corner
+  background-color: #242424
+
+::-webkit-scrollbar-thumb:vertical
+  height: 50px
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%, #4d4d4d), color-stop(100%, #333333))
+  border: 1px solid #0d0d0d
+  border-top: 1px solid #666666
+  border-left: 1px solid #666666
+
+::-webkit-scrollbar-thumb:horizontal
+  width: 50px
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #4d4d4d), color-stop(100%, #333333))
+  border: 1px solid #1f1f1f
+  border-top: 1px solid #666666
+  border-left: 1px solid #666666
